--- a/rose.html
+++ b/rose.html
@@ -68,13 +68,9 @@
                 <p class="rosa-p">
                     Desejas uma rosa?  Para cuidar amar e respeitar, pois bem,
                     lhe apresento sua soluçaõ:
-                    <iframe id="rosa-video" src="https://youtu.be/-y4MP1rQs6U?si=h3KtvDoq4iajvB5x" title="YouTube video"
-                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>
-                    </iframe><br>
-                    
                     Link caso você não consiga ver: <a href="https://www.youtube.com/watch?v=-y4MP1rQs6U&t=111s" target="_blank">♛</a>
                 </p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/-y4MP1rQs6U?si=ZE9T83T2cjsXCisU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </article>
         </section>
     </main>
